--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "check": "npm run lint && npm run nsp",
     "nsp": "nsp check"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "ava": "^0.24.0",
     "babel-cli": "^6.26.0",
@@ -40,6 +39,5 @@
   "engines": {
     "node": ">= 8.9.0",
     "npm": ">= 5.5.1"
-  },
-  "private": true
+  }
 }
