--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,23 @@
-*.env
-.DS_Store
+# dot files
 .build/
+.DS_Store
+.esm-cache
 .nyc_output
 .tmp/
 .vscode
-build/
-coverage/
-dist/
-dist/**/__mocks__/
-dist/**/__tests__/
-gulpfile*.js*
-logs/**/[^.]*
-node_modules/
+*.env
+
+# debug
 npm-debug.log*
-out/
 yarn-error.log*
+
+# folders
+./test*/
+demo*/
+node_modules/
+
+# .js files
+*.js
+*.jsx
+*.d.ts*
+gulpfile*.js
