--- a/package.json
+++ b/package.json
@@ -1,43 +1,64 @@
 {
   "name": "fb.me",
-  "version": "0.0.1",
-  "description": "Facebook Messenger SDK",
+  "version": "0.0.0",
+  "private": true,
+  "description": "Lightweight Facebook Messenger SDK",
   "keywords": [
-    "messenger",
-    "fbm",
-    "api",
-    "sdk",
-    "facebook",
-    "fb",
-    "fbme",
     "fb.me",
-    "facebook-messenger"
+    "node",
+    "typescript"
   ],
   "homepage": "https://github.com/motss/fb.me",
   "license": "MIT",
-  "author": "motss <wes.ngrongsen@gmail.com>",
-  "main": "dist/index.js",
+  "author": {
+    "name": "Rong Sen Ng",
+    "email": "wes.ngrongsen@gmail.com",
+    "url": "https://github.com/motss"
+  },
+  "main": "./index.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:motss/fb.me.git"
   },
   "scripts": {
+    "build": "npm run ts && cross-env NODE_ENV=production gulp build && npm run cleanup",
+    "build:debug": "npm run ts && gulp build && npm run cleanup",
     "check": "npm run lint && npm run nsp",
-    "nsp": "nsp check"
+    "cleanup": "rm -rf gulpfile.js",
+    "gulp": "npm run ts && gulp",
+    "lint": "tslint --project tsconfig.json --config tslint.json",
+    "lint:fix": "tslint -p . -c tslint.json --fix",
+    "nsp": "nsp check",
+    "prepublishOnly": "npm run check && npm run build",
+    "ts": "tsc --target esnext --lib esnext,esnext.asynciterable --module commonjs gulpfile.ts"
   },
   "dependencies": {},
   "devDependencies": {
-    "ava": "^0.24.0",
+    "@types/node": "^8.0.57",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.2.0",
-    "nsp": "^3.1.0"
+    "cross-env": "^5.1.1",
+    "del": "^3.0.0",
+    "env-cmd": "^7.0.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-sequence": "^0.4.6",
+    "gulp-tslint": "^8.1.2",
+    "gulp-typescript": "^3.2.3",
+    "nsp": "^3.1.0",
+    "tslint": "^5.8.0",
+    "tslint-config-airbnb": "^5.4.2",
+    "tslint-consistent-codestyle": "^1.11.0",
+    "tslint-immutable": "^4.4.0",
+    "typescript": "^2.6.2"
   },
   "engines": {
     "node": ">= 8.9.0",
     "npm": ">= 5.5.1"
-  }
+  },
+  "@std/esm": "cjs"
 }
