--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
   "devDependencies": {
     "@std/esm": "^0.18.0",
     "@types/express": "^4.11.0",
-    "@types/jest": "^21.1.9",
-    "@types/node": "^8.0.57",
+    "@types/jest": "^21.1.10",
+    "@types/node": "^8.5.2",
     "@types/node-fetch": "^1.6.7",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-function-bind": "^6.22.0",
@@ -52,7 +52,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.2.0",
-    "cross-env": "^5.1.1",
+    "cross-env": "^5.1.3",
     "del": "^3.0.0",
     "env-cmd": "^7.0.0",
     "gulp": "^3.9.1",
@@ -61,6 +61,7 @@
     "gulp-tslint": "^8.1.2",
     "gulp-typescript": "^3.2.3",
     "jest": "^22.0.4",
+    "nock": "^9.1.5",
     "nsp": "^3.1.0",
     "ts-jest": "^22.0.0",
     "tslint": "^5.8.0",
