--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@std/esm": "^0.18.0",
     "@types/express": "^4.11.0",
     "@types/jest": "^21.1.10",
+    "@types/nock": "^9.1.0",
     "@types/node": "^8.5.2",
     "@types/node-fetch": "^1.6.7",
     "babel-cli": "^6.26.0",
@@ -124,7 +125,9 @@
     "transform": {
       "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": "/test/index\\.spec\\.ts$",
+    "testMatch": [
+      "**/src/test/**/*.spec.(ts|tsx)"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
