:white_check_mark:  Updated tests to achieve 100% code coverage

--- a/package.json
+++ b/package.json
@@ -116,9 +116,10 @@
         "statements": 80
       }
     },
-    "coveragePathIgnorePatterns": [
-      "./test/",
-      "src/test/"
+    "collectCoverageFrom": [
+      "**/src/**/*.{ts|tsx}",
+      "!**/node_modules/**",
+      "!**/src/test/**/*.{ts|tsx}"
     ],
     "verbose": true,
     "bail": true,
