--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/nock": "^9.1.0",
     "@types/node": "^8.5.2",
     "@types/node-fetch": "^1.6.7",
+    "@types/supertest": "^2.0.4",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -63,6 +64,7 @@
     "jest": "^22.0.4",
     "nock": "^9.1.5",
     "nsp": "^3.1.0",
+    "supertest": "^3.0.0",
     "ts-jest": "^22.0.0",
     "tslint": "^5.8.0",
     "tslint-config-airbnb": "^5.4.2",
