--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ node_js:
   - v9
 script:
   - npm run test
+after_script:
+  - 'cat ./coverage/lcov.info | coveralls'
+  - 'cat ./coverage/lcov.info | codecov'
