--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.2.0",
+    "codecov": "^3.0.0",
+    "coveralls": "^3.0.0",
     "cross-env": "^5.1.3",
     "del": "^3.0.0",
     "env-cmd": "^7.0.0",
