:white_check_mark: Completed all test suites with a whole lot of improvements

--- a/package.json
+++ b/package.json
@@ -123,6 +123,9 @@
     ],
     "verbose": true,
     "bail": true,
+    "rootDirs": [
+      "<rootDir>/src/"
+    ],
     "transform": {
       "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
