--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint:fix": "tslint -p . -c tslint.json --fix",
     "nsp": "nsp check",
     "prepublishOnly": "npm run check && npm run build",
-    "test": "jest",
+    "test": "jest --config ./.jestrc.json",
     "ts": "tsc --target esnext --lib esnext,esnext.asynciterable --module commonjs gulpfile.ts"
   },
   "dependencies": {
@@ -73,68 +73,5 @@
     "node": ">= 8.9.0",
     "npm": ">= 5.5.1"
   },
-  "@std/esm": "cjs",
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "babelConfig": {
-          "presets": [
-            [
-              "env",
-              {
-                "targets": {
-                  "node": "current"
-                },
-                "spec": true,
-                "modules": "commonjs",
-                "useBuiltIns": true
-              }
-            ]
-          ],
-          "plugins": [
-            "transform-function-bind",
-            [
-              "transform-object-rest-spread",
-              {
-                "useBuiltIns": true
-              }
-            ]
-          ]
-        }
-      }
-    },
-    "testEnvironment": "node",
-    "collectCoverage": true,
-    "coverageDirectory": "./coverage",
-    "coverageThreshold": {
-      "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": 80
-      }
-    },
-    "collectCoverageFrom": [
-      "**/src/**/*.{ts|tsx}",
-      "!**/node_modules/**",
-      "!**/src/test/**/*.{ts|tsx}"
-    ],
-    "verbose": true,
-    "bail": true,
-    "rootDirs": [
-      "<rootDir>/src/"
-    ],
-    "transform": {
-      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testMatch": [
-      "**/src/test/**/*.spec.(ts|tsx)"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "json"
-    ]
-  }
+  "@std/esm": "cjs"
 }
