--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ dist: trusty
 node_js:
   - v8
   - v9
+before_script:
+  - npm install coveralls codecov
 script:
+  - npm run check
   - npm run test
-after_script:
+after_success:
   - 'cat ./coverage/lcov.info | coveralls'
   - 'cat ./coverage/lcov.info | codecov'
