--- a/package.json
+++ b/package.json
@@ -25,48 +25,46 @@
     "check": "npm run lint && npm run nsp",
     "cleanup": "rm -rf gulpfile.js",
     "gulp": "npm run ts && gulp",
-    "lint": "tslint --project tsconfig.json --config tslint.json",
-    "lint:fix": "tslint -p . -c tslint.json --fix",
+    "lint": "npm run ts && gulp lint && npm run cleanup",
     "nsp": "nsp check",
     "prepublishOnly": "npm run check && npm run build",
     "test": "jest --config ./.jestrc.json",
     "ts": "tsc --target esnext --lib esnext,esnext.asynciterable --module commonjs gulpfile.ts"
   },
   "dependencies": {
+    "@messageflow/send-as": "0.0.3",
     "express": "^4.16.2",
-    "make-fetch-happen": "^2.6.0"
+    "fetch-as": "^0.2.1"
   },
   "devDependencies": {
-    "@std/esm": "^0.18.0",
+    "@std/esm": "^0.20.0",
     "@types/express": "^4.11.0",
-    "@types/jest": "^21.1.10",
-    "@types/nock": "^9.1.0",
-    "@types/node": "^8.5.2",
+    "@types/jest": "^22.1.0",
+    "@types/nock": "^9.1.2",
+    "@types/node": "^9.4.0",
     "@types/node-fetch": "^1.6.7",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.2.0",
     "codecov": "^3.0.0",
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.3",
     "del": "^3.0.0",
-    "env-cmd": "^7.0.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
-    "gulp-sequence": "^0.4.6",
+    "gulp-babel": "^7.0.1",
+    "gulp-sequence": "^1.0.0",
     "gulp-tslint": "^8.1.2",
-    "gulp-typescript": "^3.2.3",
-    "jest": "^22.0.4",
-    "nock": "^9.1.5",
+    "gulp-typescript": "^3.2.4",
+    "jest": "^22.1.4",
+    "nock": "^9.1.6",
     "nsp": "^3.1.0",
     "supertest": "^3.0.0",
-    "ts-jest": "^22.0.0",
-    "tslint": "^5.8.0",
-    "tslint-config-airbnb": "^5.4.2",
+    "ts-jest": "^22.0.1",
+    "tslint": "^5.9.1",
+    "tslint-config-airbnb": "^5.5.0",
     "tslint-consistent-codestyle": "^1.11.0",
-    "tslint-immutable": "^4.4.0",
+    "tslint-immutable": "^4.5.1",
     "typescript": "^2.6.2"
   },
   "engines": {
