--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fb.me",
   "version": "0.0.0",
-  "description": "Lightweight Facebook Messenger SDK",
+  "description": "Express middleware for chatbot development with Facebook Messenger",
   "keywords": [
     "fb.me",
     "node",
@@ -56,6 +56,7 @@
     "gulp-sequence": "^1.0.0",
     "gulp-tslint": "^8.1.2",
     "gulp-typescript": "^3.2.4",
+    "is-url-superb": "^2.0.0",
     "jest": "^22.1.4",
     "nock": "^9.1.6",
     "nsp": "^3.1.0",
