--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "description": "Express app for chatbot development with Facebook Messenger",
   "keywords": [
+    "facebook-messenger-bot",
+    "facebook-messenger",
+    "facebook",
     "fb.me",
+    "messenger",
     "node",
     "typescript"
   ],
@@ -37,16 +41,15 @@
     "fetch-as": "^0.2.1"
   },
   "devDependencies": {
-    "@std/esm": "^0.20.0",
     "@types/express": "^4.11.0",
-    "@types/jest": "^22.1.0",
+    "@types/jest": "^22.1.1",
     "@types/nock": "^9.1.2",
     "@types/node": "^9.4.0",
     "@types/node-fetch": "^1.6.7",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-minify": "^0.2.0",
+    "babel-preset-minify": "^0.3.0",
     "codecov": "^3.0.0",
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.3",
@@ -61,16 +64,15 @@
     "nock": "^9.1.6",
     "nsp": "^3.1.0",
     "supertest": "^3.0.0",
-    "ts-jest": "^22.0.1",
+    "ts-jest": "^22.0.2",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.5.0",
     "tslint-consistent-codestyle": "^1.11.0",
     "tslint-immutable": "^4.5.1",
-    "typescript": "^2.6.2"
+    "typescript": "^2.7.1"
   },
   "engines": {
     "node": ">= 8.9.0",
     "npm": ">= 5.5.1"
-  },
-  "@std/esm": "cjs"
+  }
 }
