--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "build:debug": "npm run ts && gulp build && npm run cleanup",
     "check": "npm run lint && npm run nsp",
     "cleanup": "rm -rf gulpfile.js",
+    "debug": "env-cmd ./src/demo/.env node --inspect -r @std/esm ./dist",
+    "demo": "npm run ts && gulp demo",
     "gulp": "npm run ts && gulp",
     "lint": "npm run ts && cross-env NODE_ENV=production gulp lint && npm run cleanup",
     "nsp": "nsp check",
@@ -41,6 +43,7 @@
     "fetch-as": "^0.2.1"
   },
   "devDependencies": {
+    "@std/esm": "^0.20.0",
     "@types/express": "^4.11.0",
     "@types/jest": "^22.1.1",
     "@types/nock": "^9.1.2",
@@ -54,6 +57,7 @@
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.3",
     "del": "^3.0.0",
+    "env-cmd": "^7.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-sequence": "^1.0.0",
@@ -74,5 +78,6 @@
   "engines": {
     "node": ">= 8.9.0",
     "npm": ">= 5.5.1"
-  }
+  },
+  "@std/esm": "cjs"
 }
