:white_check_mark: Fixed broken tests by adding missing custom error handler

--- a/.jestrc.json
+++ b/.jestrc.json
@@ -40,6 +40,7 @@
   "collectCoverageFrom": [
     "**/src/**/*.{ts|tsx}",
     "!**/node_modules/**",
+    "!**/src/demo/**/*.{ts|tsx}",
     "!**/src/test/**/*.{ts|tsx}"
   ],
   "verbose": true,
