♻️ Minor refactoring to use 'pMapSeries' and 'idx' for optional chaining

--- a/.jestrc.json
+++ b/.jestrc.json
@@ -16,6 +16,7 @@
           ]
         ],
         "plugins": [
+          "babel-plugin-idx",
           [
             "transform-object-rest-spread",
             {
