--- a/package.json
+++ b/package.json
@@ -38,18 +38,20 @@
     "ts": "tsc --target esnext --lib esnext,esnext.asynciterable --module commonjs gulpfile.ts"
   },
   "dependencies": {
-    "@messageflow/send-as": "0.0.3",
+    "@messageflow/send-as": "0.0.5",
     "express": "^4.16.2",
-    "fetch-as": "^0.2.1"
+    "fetch-as": "^0.2.1",
+    "p-map-series": "^1.0.0"
   },
   "devDependencies": {
-    "@std/esm": "^0.20.0",
-    "@types/express": "^4.11.0",
-    "@types/jest": "^22.1.1",
+    "@std/esm": "^0.23.0",
+    "@types/express": "^4.11.1",
+    "@types/jest": "^22.1.3",
     "@types/nock": "^9.1.2",
-    "@types/node": "^9.4.0",
+    "@types/node": "^9.4.6",
     "@types/node-fetch": "^1.6.7",
     "babel-cli": "^6.26.0",
+    "babel-plugin-idx": "^2.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.3.0",
@@ -61,19 +63,20 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-sequence": "^1.0.0",
-    "gulp-tslint": "^8.1.2",
+    "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^3.2.4",
+    "idx": "^2.2.0",
     "is-url-superb": "^2.0.0",
-    "jest": "^22.1.4",
-    "nock": "^9.1.6",
-    "nsp": "^3.1.0",
+    "jest": "^22.4.2",
+    "nock": "^9.2.1",
+    "nsp": "^3.2.1",
     "supertest": "^3.0.0",
-    "ts-jest": "^22.0.2",
+    "ts-jest": "^22.0.4",
     "tslint": "^5.9.1",
-    "tslint-config-airbnb": "^5.5.0",
-    "tslint-consistent-codestyle": "^1.11.0",
+    "tslint-config-airbnb": "^5.7.0",
+    "tslint-consistent-codestyle": "^1.11.1",
     "tslint-immutable": "^4.5.1",
-    "typescript": "^2.7.1"
+    "typescript": "^2.7.2"
   },
   "engines": {
     "node": ">= 8.9.0",
