🔧 Updated tsconfig for --esModuleInterop to fix #13

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,19 @@
 {
   "compilerOptions": {
-    "allowUnusedLabels": true,
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": false,
+    "allowUnusedLabels": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
+    "newLine": "LF",
+    "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true,
     "removeComments": true,
     "traceResolution": false,
-    "newLine": "LF",
-    "experimentalDecorators": true,
-    "lib": ["esnext", "esnext.asynciterable"],
+
+    "lib": ["esnext", "esnext.array", "esnext.asynciterable"],
     "moduleResolution": "node",
     "module": "es2015",
     "target": "esnext",
