--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
 
     "lib": ["esnext", "esnext.array", "esnext.asynciterable"],
     "moduleResolution": "node",
-    "module": "es2015",
+    "module": "commonjs",
     "target": "esnext",
     "jsx": "react",
     "jsxFactory": "h",
