--- a/package.json
+++ b/package.json
@@ -24,48 +24,36 @@
     "url": "git@github.com:motss/fb.me.git"
   },
   "scripts": {
-    "build": "npm run ts && cross-env NODE_ENV=production gulp build && npm run cleanup",
-    "build:debug": "npm run ts && gulp build && npm run cleanup",
+    "build": "cross-env NODE_ENV=production gulp",
     "check": "npm run lint && npm run nsp",
-    "cleanup": "rm -rf gulpfile.js",
-    "debug": "env-cmd ./src/demo/.env node --inspect -r @std/esm ./dist",
-    "demo": "npm run ts && gulp demo",
-    "gulp": "npm run ts && gulp",
-    "lint": "npm run ts && cross-env NODE_ENV=production gulp lint && npm run cleanup",
+    "debug": "env-cmd ./src/demo/.env node --inspect -r esm ./dist",
+    "demo": "gulp demo",
+    "gulp": "gulp",
+    "lint": "cross-env NODE_ENV=production gulp lint",
     "nsp": "nsp check",
     "prepublishOnly": "npm run check && npm run build",
-    "test": "jest --config ./.jestrc.json",
-    "ts": "tsc --target esnext --lib esnext,esnext.asynciterable --module commonjs gulpfile.ts"
+    "test": "jest --config ./.jestrc.json"
   },
   "dependencies": {
-    "@messageflow/send-as": "0.0.5",
+    "@messageflow/send-as": "0.0.8",
     "express": "^4.16.2",
-    "fetch-as": "^0.2.1",
+    "fetch-as": "^0.4.1",
+    "idx": "^2.2.0",
     "p-map-series": "^1.0.0"
   },
   "devDependencies": {
-    "@std/esm": "^0.23.0",
+    "@messageflow/build": "0.0.8",
     "@types/express": "^4.11.1",
     "@types/jest": "^22.1.3",
     "@types/nock": "^9.1.2",
     "@types/node": "^9.4.6",
     "@types/node-fetch": "^1.6.7",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-idx": "^2.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-minify": "^0.3.0",
-    "codecov": "^3.0.0",
-    "coveralls": "^3.0.0",
     "cross-env": "^5.1.3",
-    "del": "^3.0.0",
     "env-cmd": "^7.0.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
-    "gulp-sequence": "^1.0.0",
-    "gulp-tslint": "^8.1.3",
-    "gulp-typescript": "^3.2.4",
-    "idx": "^2.2.0",
+    "esm": "^3.0.14",
+    "gulp": "^4.0.0",
     "is-url-superb": "^2.0.0",
     "jest": "^22.4.2",
     "nock": "^9.2.1",
@@ -82,5 +70,8 @@
     "node": ">= 8.9.0",
     "npm": ">= 5.5.1"
   },
-  "@std/esm": "cjs"
+  "esm": "cjs",
+  "publishConfig": {
+    "access": "public"
+  }
 }
