--- a/package.json
+++ b/package.json
@@ -42,35 +42,32 @@
     "p-map-series": "^1.0.0"
   },
   "devDependencies": {
-    "@messageflow/build": "0.0.8",
+    "@messageflow/build": "0.0.12",
+    "@messageflow/tslint-config": "0.0.3",
     "@types/express": "^4.11.1",
-    "@types/jest": "^22.1.3",
+    "@types/jest": "^22.2.2",
     "@types/nock": "^9.1.2",
-    "@types/node": "^9.4.6",
-    "@types/node-fetch": "^1.6.7",
+    "@types/node": "^9.6.2",
+    "@types/node-fetch": "^1.6.8",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.3",
     "env-cmd": "^7.0.0",
-    "esm": "^3.0.14",
+    "esm": "^3.0.15",
     "gulp": "^4.0.0",
     "is-url-superb": "^2.0.0",
-    "jest": "^22.4.2",
+    "jest": "^22.4.3",
     "nock": "^9.2.1",
     "nsp": "^3.2.1",
     "supertest": "^3.0.0",
     "ts-jest": "^22.0.4",
     "tslint": "^5.9.1",
-    "tslint-config-airbnb": "^5.7.0",
-    "tslint-consistent-codestyle": "^1.11.1",
-    "tslint-immutable": "^4.5.1",
     "typescript": "^2.7.2"
   },
   "engines": {
     "node": ">= 8.9.0",
     "npm": ">= 5.5.1"
   },
-  "esm": "cjs",
   "publishConfig": {
     "access": "public"
   }
